ingress/ingress-configuration.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-simple
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: discovery.server.com
      http:
        paths:
          - pathType: Prefix
            path: /()(.*)
            backend:
              service:
                name: discovery-service
                port:
                  number: 8091
    - host: jaeger.server.com
      http:
        paths:
          - pathType: Prefix
            path: /()(.*)
            backend:
              service:
                name: jaeger-service
                port:
                  number: 16686
    - host: keycloak.server.com
      http:
        paths:
          - pathType: Prefix
            path: /()(.*)
            backend:
              service:
                name: keycloak-service
                port:
                  number: 8080
    - host: service.server.com
      http:
        paths:
        - pathType: Prefix
          path: /first(/|$)(.*)
          backend:
            service:
              name: first-service
              port:
                number: 4001
        - pathType: Prefix
          path: /second(/|$)(.*)
          backend:
            service:
              name: second-service
              port:
                number: 4002
        - pathType: Prefix
          path: /third(/|$)(actuator.*)
          backend:
            service:
              name: third-service
              port:
                number: 9876
        - pathType: Prefix
          path: /third(/|$)(.*)
          backend:
            service:
              name: third-service
              port:
                number: 4003
        - pathType: Prefix
          path: /fourth(/|$)(.*)
          backend:
            service:
              name: fourth-service
              port:
                number: 4004
        - pathType: Prefix
          path: /fifth(/|$)(.*)
          backend:
            service:
              name: fifth-service
              port:
                number: 4005
        - pathType: Prefix
          path: /sixth(/|$)(.*)
          backend:
            service:
              name: sixth-service
              port:
                number: 4006
        - pathType: Prefix
          path: /seventh(/|$)(.*)
          backend:
            service:
              name: seventh-service
              port:
                number: 4007
        - pathType: Prefix
          path: /eighth(/|$)(.*)
          backend:
            service:
              name: eighth-service
              port:
                number: 4008
        - pathType: Prefix
          path: /ninth(/|$)(.*)
          backend:
            service:
              name: ninth-service
              port:
                number: 4009
        - pathType: Prefix
          path: /tenth(/|$)(.*)
          backend:
            service:
              name: tenth-service
              port:
                number: 4010
        - pathType: Prefix
          path: /twelfth(/|$)(.*)
          backend:
            service:
              name: twelfth-service
              port:
                number: 4012
        - pathType: Prefix
          path: /thirteenth(/|$)(.*)
          backend:
            service:
              name: thirteenth-service
              port:
                number: 4013
        - pathType: Prefix
          path: /()(console.*)
          backend:
            service:
              name: thirteenth-service
              port:
                number: 4013
        - pathType: Prefix
          path: /fourteenth(/|$)(.*)
          backend:
            service:
              name: fourteenth-service
              port:
                number: 4014
        - pathType: Prefix
          path: /fifteenth(/|$)(.*)
          backend:
            service:
              name: fifteenth-service
              port:
                number: 4015
        - pathType: Prefix
          path: /sixteenth(/|$)(.*)
          backend:
            service:
              name: sixteenth-service
              port:
                number: 4016
